--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">
-                  A very long brige, over the forest...
+                  A very long bridge, over the forest floor
                 </h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
@@ -107,7 +107,7 @@
         </section>
       </main>
       <footer class="footer">
-        <h3 class="footer__copyrights">2023 © Spots</h3>
+        <p class="footer__copyrights">2023 © Spots</p>
       </footer>
     </div>
   </body>
