--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                 class="modal__input"
                 placeholder="Place a link to the picture"
               /> </label
-            ><label for="profile-description-input" class="modal__label">
+            ><label for="card-caption-input" class="modal__label">
               Caption
               <input
-                id="profile-description-input"
+                id="card-caption-input"
                 type="text"
                 class="modal__input"
                 placeholder="Type your caption"
