--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <footer class="footer">
         <p class="footer__copyrights">2023 © Spots</p>
       </footer>
-      <div class="modal">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <div class="modal__header">
             <h2 class="modal__title">Edit profile</h2>
@@ -141,7 +141,7 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_is-opened">
+      <div class="modal" id="new-post-modal">
         <div class="modal__container">
           <div class="modal__header">
             <h2 class="modal__title">New post</h2>
@@ -174,5 +174,6 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
